added a few breaks lines

--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
-ஆசமனம்
+ஆசமனம் <br />
 
-சுக்லாம் பரதரம் விஷ்ணும்
+சுக்லாம் பரதரம் விஷ்ணும் <br />
 
 ஓம் பூ: +பூர்புவஸ்வரோம், ம்மோபாத்த சமஸ்த ......+ ப்ரீத்யர்த்தம், அபவித்ரா: பவித்ரோவா சர்வாவஸ்த்தாம் கதோபிவா, யெஸ்மரேத் புண்டரீகாக்ஷ, ஸபாஹ்ய, அப்யந்தர: சுசிஹி மானஸம் வாசிகம், பாபம், கர்மணா சமுபார்ஜிதம், ஸ்ரீராம, ஸ்மரணேநைவ, வ்யபோஹதி நசம்ஸய: ஸ்ரீராம ராம ராம திதிர்விஷ்ணு: ததாவார: நக்ஷத்ரம், விஷ்ணுரேவச யோகஸ்ச்ச கரணம்சைவ சர்வம் விஷ்ணுமயம் ஜகத், ஸ்ரீ கோவிந்த கோவிந்த அத்யஸ்ரீ பகவத: மஹா புருஷஸ்ய விஷ்ணோராக்யயா ப்ரவர்த்தமானஸ்ய, ஆத்யப்ரஹ்மண: த்விதீய பரார்த்தே ஸ்வேத வராஹ கல்பே, வைவஸ்வத மண்வந்த்ரே அஷ்டாவிம்சதி, தமே, கலியுகே, ப்ரதமேபாதே ஜம்பூத்வீபே, பாரதவர்ஷே, பரதகண்டே மேரோ: தக்ஷிணே பார்ஷ்வே ஸஹாப்தே அஸ்மின்வர்த்தமாணே, வ்யாபஹாரிகே, ப்ரபவாதி, ஷஷ்ட்யாம் ஸம்வத்சராணாம், மத்யே
-
-
-													ப்லவ (________)  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, கன்யா (________) மாஸே, க்ருஷ்ண பக்ஷே, த்விதீயாயாம் (________) புண்யதிதௌ, வாஸர: வாஸரஸ்து ஸிதிர வாஸர யுக்தாயாம், ரேவதீ (________) நக்ஷத்ர யுக்தாயாம்¬ வ்ருத்தி (________) நாம யோக தைதுல (________) கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
-
+ <br />
+ப்லவ (________)  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, கன்யா (________) மாஸே, க்ருஷ்ண பக்ஷே, த்விதீயாயாம் (________) புண்யதிதௌ, வாஸர: வாஸரஸ்து ஸிதிர வாஸர யுக்தாயாம், ரேவதீ (________) நக்ஷத்ர யுக்தாயாம்¬ வ்ருத்தி (________) நாம யோக தைதுல (________) கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
+ <br />
 ப்ராசீன விதி - பூணூல் இடம் மாற்றிக்கொள்ளவும்
+ <br />
 ________ கோத்ராணாம் அப்பாவழி கோத்ரத்தை கூறவும் ________, ________, ________ ஶர்மணாம் (அப்பாவின் பெயர், தாத்தா பெயர், கொள்ளுத் தாத்தா பெயர்)
  வஸுருத்ராதித்ய ஸ்வரூபாணாம் அஸ்மத் பித்ரு பிதாமஹ ப்ரபிதாமஹானாம்
-
-தாயார் உயிருடன் இல்லையெனில் பின் அடுத்துவருவதைக் கூறுக... மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம் 
+ <br />
+<strike>தாயார் உயிருடன் இல்லையெனில் பின் அடுத்துவருவதைக் கூறுக... மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம்</strike>
 
 தாயார் உயிருடன் இருப்பின் பின்... பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
-
+ <br />
 ________ கோத்ராணாம் (அம்மாவின் கோத்ர வழியைக் கூறவும்)
+ <br />
 ________, ________, ________ ஶர்மணாம் (அம்மாவின்அப்பா பெயர், தாத்தா பெயர், கொள்ளுத் தாத்தா பெயர்)
-
+ <br />
 வஸுருத்ராதித்ய, ஸ்வரூபாணாம் அஸ்மத், ஸபத்னீக, மாதாமஹ, மாது: பிதாமஹ, மாது: ப்ரபிதா மஹாணாம் உபயவம்ஸபித்ரூணாம் தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு-ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவசிஷ்டானாம் ஸர்வேஷாம் காருணீக பித்ரூணாம்ஶ்ச துரிலோசன ஸம்யகாணாம் விஶ்வேஷாம் தேவாணாம் மஹாவிஷ்ணூஶ்ச அக்ஷ்ய்ய த்ருப்த்யர்த்தம் ஸிம்ஹகதே ஸவிதரி ஆஷாட்யா: பஞ்சமாபரபக்ஷ ப்ரயுக்த மஹாளய பக்ஷ புண்யகாலே அத்யதின மஹாளய ஸ்ரார்த்தம்  தில தர்பண ரூபேண அத்ய கரிஷ்யே.
-
+ <br />
 தர்ப்பத்தை வலது பக்கம் போட்டுவிட்டு, பூணூலை வலம் பண்ணிண்டு கையை அலம்பிக்கிறது, திருப்பியும் இடம் பண்ணிக்கிறது.												
-
+ <br />
+ <br />
+ <br />
 avahanam:
 ஸகாருணீக வர்கத்வய பித்ரூண் ஆவாஹயாமி
-
+ <br />
 final tharppanam in place of ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி:
 தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவஸிஷ்ட்டாணாம் ஸர்வேஶாம் ஸகாருணீக பித்ரூன் ஸ்வதா நமஸ் தர்ப்பயாமி
-
+ <br />
 யதாஸ்தானம் - (எள்ளை எடுத்து ஆவாஹனம் செய்த மாதிரி எடுத்துப்போடவும்):
 ஆயாத பிதர: ஸோம்யா கம்பீரை:பூர்வ்யை: ப்ரஜாமஸ்மப்யம் தததோ ரயிம் ச தீர்காயுத்வம் ச ஶதஶாரதஞ் ச அஸ்மாத் கூர்ச்சாத் (ஒரு கூர்ச்சமா இருக்கரவா) ஸகாருணீக வர்க்கத்வய பித்ரூன் யதாஸ்த்தானம் ப்ரதிஷ்டாபயாமி என்று எள்ளைப்போடவும்.
-
+ <br />
 
 day
 date
