trying it out with a templated variable

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var data =
  வைவஸ்வத மண்வந்த்ரே அஷ்டாவிம்சதி, தமே, கலியுகே, ப்ரதமேபாதே ஜம்பூத்வீபே, பாரதவர்ஷே, பரதகண்டே மேரோ: தக்ஷிணே பார்ஷ்வே ஸஹாப்தே அஸ்மின்வர்த்தமாணே, வ்யாபஹாரிகே,
  ப்ரபவாதி, ஷஷ்ட்யாம் ஸம்வத்சராணாம்,மத்யே
 
- ப்லவ (________)  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, கன்யா (________) மாஸே, க்ருஷ்ண பக்ஷே, த்விதீயாயாம் (________) புண்யதிதௌ, வாஸர: வாஸரஸ்து
+ ப்லவ ({{:yearname}})  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, கன்யா (________) மாஸே, க்ருஷ்ண பக்ஷே, த்விதீயாயாம் (________) புண்யதிதௌ, வாஸர: வாஸரஸ்து
  சஸளம்ய (________) வாஸர யுக்தாயாம், ரேவதீ (________) நக்ஷத்ர யுக்தாயாம்¬ வ்ருத்தி (________) நாம யோக தைதுல (________) கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
 <p/>
 
