--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 var data = 
     [
      {
-"day": "புதன்";
-"date":  "22-09-2021";
-"sankalpam":  "";
-"motheralive":  "y";
-"appagothram":  "பாரத்வாஜ";
-"pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"];
-"maamagothram":  "கௌண்டின்ய";
-"maamagothrams":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"];
-"yearname":  "ப்லவ";
-"monthname":  "கன்யா";
-"starname":  "ரேவதீ";
-"dayname":  "சஸளம்ய";
-"yoganame":  "வ்ருத்தி";
-"karananame": "தைதுல";
+"day": "புதன்",
+"date":  "22-09-2021",
+"sankalpam":  "",
+"motheralive":  "y",
+"appagothram":  "பாரத்வாஜ",
+"pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
+"maamagothram":  "கௌண்டின்ய",
+"maamagothrams":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"],
+"yearname":  "ப்லவ",
+"monthname":  "கன்யா",
+"starname":  "ரேவதீ",
+"dayname":  "சஸளம்ய",
+"yoganame":  "வ்ருத்தி",
+"karananame": "தைதுல"
  }
  ];
 </script>
