more templatized variables

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@ var data =
 "appagothram":  "பாரத்வாஜ",
 "pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
 "maamagothram":  "கௌண்டின்ய",
-"maamagothrams":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"],
+"maamasharmas":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"],
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
+"thithiname": "த்விதீயாயாம்",
 "starname":  "ரேவதீ",
-"dayname":  "சஸளம்ய",
+"dayname":  "சௌம்ய",
 "yoganame":  "வ்ருத்தி",
 "karananame": "தைதுல"
  }
@@ -43,8 +44,8 @@ var data =
  வைவஸ்வத மண்வந்த்ரே அஷ்டாவிம்சதி, தமே, கலியுகே, ப்ரதமேபாதே ஜம்பூத்வீபே, பாரதவர்ஷே, பரதகண்டே மேரோ: தக்ஷிணே பார்ஷ்வே ஸஹாப்தே அஸ்மின்வர்த்தமாணே, வ்யாபஹாரிகே,
  ப்ரபவாதி, ஷஷ்ட்யாம் ஸம்வத்சராணாம்,மத்யே
 
- ப்லவ ({{:yearname}})  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, கன்யா (________) மாஸே, க்ருஷ்ண பக்ஷே, த்விதீயாயாம் (________) புண்யதிதௌ, வாஸர: வாஸரஸ்து
- சஸளம்ய (________) வாஸர யுக்தாயாம், ரேவதீ (________) நக்ஷத்ர யுக்தாயாம்¬ வ்ருத்தி (________) நாம யோக தைதுல (________) கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
+ ({{:yearname}})  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, {{:monthname}} மாஸே, க்ருஷ்ண பக்ஷே, {{:thithiname}} புண்யதிதௌ, வாஸர: வாஸரஸ்து
+ {{:dayname}} வாஸர யுக்தாயாம், {{:starname}} நக்ஷத்ர யுக்தாயாம்¬ {{:yoganame}} நாம யோக {{:karananame}} கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
 <p/>
 
 <quote>
@@ -52,7 +53,10 @@ var data =
 <quote/>
 
 <p>
-________ கோத்ராணாம் அப்பாவழி கோத்ரத்தை கூறவும் ________, ________, ________ ஶர்மணாம் (அப்பாவின் பெயர், தாத்தா பெயர், கொள்ளுத் தாத்தா பெயர்)
+{{:appagothram}} ________ கோத்ராணாம் அப்பாவழி கோத்ரத்தை கூறவும்
+</p>
+<p>
+________, ________, ________ ஶர்மணாம் (அப்பாவின் பெயர், தாத்தா பெயர், கொள்ளுத் தாத்தா பெயர்)
  வஸுருத்ராதித்ய ஸ்வரூபாணாம் அஸ்மத் பித்ரு பிதாமஹ ப்ரபிதாமஹானாம்
 <p/>
 
@@ -64,7 +68,7 @@ ________ கோத்ராணாம் அப்பாவழி கோத்ர
 தாயார் உயிருடன் இருப்பின் பின்... பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
 <p/>
 <p>
-________ கோத்ராணாம் (அம்மாவின் கோத்ர வழியைக் கூறவும்)
+________{{:maamagothram}} கோத்ராணாம் (அம்மாவின் கோத்ர வழியைக் கூறவும்)
 <p/>
 <p>
 ________, ________, ________ ஶர்மணாம் (அம்மாவின்அப்பா பெயர், தாத்தா பெயர், கொள்ளுத் தாத்தா பெயர்)
