--- a/index.html
+++ b/index.html
@@ -52,27 +52,19 @@ var data =
 ப்ராசீன விதி - பூணூல் இடம் மாற்றிக்கொள்ளவும்
 <quote/>
 
-<p>
-{{:appagothram}} கோத்ராணாம் அப்பாவழி கோத்ரத்தை கூறவும்
-</p>
-<p>
+{{:appagothram}} கோத்ராணாம்
+
 {{:pithrusharmas}} ஶர்மணாம் 
  வஸுருத்ராதித்ய ஸ்வரூபாணாம் அஸ்மத் பித்ரு பிதாமஹ ப்ரபிதாமஹானாம்
-<p/>
 
 <p>
 <strike>தாயார் உயிருடன் இல்லையெனில் பின் அடுத்துவருவதைக் கூறுக... மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம்</strike>
 <p/>
 
-<p>
 தாயார் உயிருடன் இருப்பின் பின்... பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
-<p/>
-<p>
+
 {{:maamagothram}} கோத்ராணாம்
-<p/>
-<p>
 {{:maamasharmas}} ஶர்மணாம் 
-<p/>
 </script>
   
 <p>
