fixed the final tharppanam text

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ avahanam:
 <p/>
 
 <p>
-final tharppanam in place of ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி:
+ Instead of <strike>ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி</strike>, say
 தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவஸிஷ்ட்டாணாம் ஸர்வேஶாம் ஸகாருணீக பித்ரூன் ஸ்வதா நமஸ் தர்ப்பயாமி
 <p/>
 
