--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ var data =
 "day": "புதன்",
 "date":  "22-09-2021",
 "sankalpam":  "",
-"motheralive":  "y",
+"motheralive":  "true",
 "appagothram":  "பாரத்வாஜ",
 "pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
 "maamagothram":  "கௌண்டின்ய",
@@ -28,6 +28,9 @@ var data =
 </script>
  </head>
  <body>
+<form>
+ <input type="checkbox" data-link="motheralive" />
+ </form>
 <div id="tharppanam"></div>
 
 <script id="theTmpl" type="text/x-jsrender">
@@ -57,11 +60,12 @@ var data =
 {{:pithrusharmas}} ஶர்மணாம் 
  வஸுருத்ராதித்ய ஸ்வரூபாணாம் அஸ்மத் பித்ரு பிதாமஹ ப்ரபிதாமஹானாம்
 
-<p>
-<strike>தாயார் உயிருடன் இல்லையெனில் பின் அடுத்துவருவதைக் கூறுக... மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம்</strike>
-<p/>
+<span data-link="visible{:!motheralive}">
+தாயார் உயிருடன் இல்லையெனில் பின் அடுத்துவருவதைக் கூறுக... மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம்
+<span/>
 
-தாயார் உயிருடன் இருப்பின் பின்... பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
+<span data-link="visible{:motheralive}">பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
+</span>
 
 {{:maamagothram}} கோத்ராணாம்
 {{:maamasharmas}} ஶர்மணாம் 
