description for thaayaar bool checkbox

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var data =
  </head>
  <body>
 <form>
- <input type="checkbox" data-link="motheralive" />
+தாயார் உள்ளார் <input type="checkbox" data-link="motheralive" />
  </form>
 <div id="tharppanam"></div>
 
