--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var data =
 <div id="tharppanam"></div>
 
 <script id="theTmpl" type="text/x-jsrender">
-தாயார் உள்ளார் <input type="checkbox" data-link="motheralive" />
+<label>தாயார் உள்ளார் <input type="checkbox" data-link="motheralive" /> </label>
  
 <h1 style="color: darkblue">{{:date}}. {{:day}}.</h1>
 
