this stupid unclosed span tag....!!!

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var data =
 
 <p>ஆசமனம் <p/>
 
-<p>சுக்லாம் பரதரம் விஷ்ணும் <p/>
+<p>ஷுக்லாம் பரதரம் விஷ்ணும்... <p/>
 
 <p>
  ஓம் பூ: +பூர்புவஸ்வரோம், ம்மோபாத்த சமஸ்த ......+ ப்ரீத்யர்த்தம், அபவித்ரா: பவித்ரோவா சர்வாவஸ்த்தாம் கதோபிவா, யெஸ்மரேத் புண்டரீகாக்ஷ, ஸபாஹ்ய, அப்யந்தர: சுசிஹி மானஸம்
@@ -48,7 +48,8 @@ var data =
  ப்ரபவாதி, ஷஷ்ட்யாம் ஸம்வத்சராணாம்,மத்யே
 
  ({{:yearname}})  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, {{:monthname}} மாஸே, க்ருஷ்ண பக்ஷே, {{:thithiname}} புண்யதிதௌ, வாஸர: வாஸரஸ்து
- {{:dayname}} வாஸர யுக்தாயாம், {{:starname}} நக்ஷத்ர யுக்தாயாம்¬ {{:yoganame}} நாம யோக {{:karananame}} கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம் த்விதீயாயாம் (________) புண்யதிதௌ
+ {{:dayname}} வாஸர யுக்தாயாம், {{:starname}} நக்ஷத்ர யுக்தாயாம்¬ {{:yoganame}} நாம யோக {{:karananame}} கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம்
+ {{:thithiname}} புண்யதிதௌ
 <p/>
 
 <quote>
@@ -61,8 +62,8 @@ var data =
  வஸுருத்ராதித்ய ஸ்வரூபாணாம் அஸ்மத் பித்ரு பிதாமஹ ப்ரபிதாமஹானாம்
 
 <span data-link="visible{:!motheralive}">
-மாத்ரு பிதாமஹீ ப்ரபிதாமஹீனாம்
-<span/>
+மாத்ரு, பிதாமஹீ, ப்ரபிதாமஹீனாம்
+</span>
 
 <span data-link="visible{:motheralive}">பிதாமஹீ, பிது:பிதாமஹீ, பிது:ப்ரபிதாமஹீனாம்
 </span>
