fixed the closing p tag incorrect syntax
this was causing an invalid syntax when rendering the elements

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ var data =
  
 <h1 style="color: darkblue">{{:date}}. {{:day}}.</h1>
 
-<p>ஆசமனம் <p/>
+<p>ஆசமனம் </p>
 
-<p>ஷுக்லாம் பரதரம் விஷ்ணும்... <p/>
+<p>ஷுக்லாம் பரதரம் விஷ்ணும்... </p>
 
 <p>
  ஓம் பூ: +பூர்புவஸ்வரோம், ம்மோபாத்த சமஸ்த ......+ ப்ரீத்யர்த்தம், அபவித்ரா: பவித்ரோவா சர்வாவஸ்த்தாம் கதோபிவா, யெஸ்மரேத் புண்டரீகாக்ஷ, ஸபாஹ்ய, அப்யந்தர: சுசிஹி மானஸம்
@@ -50,7 +50,7 @@ var data =
  ({{:yearname}})  நாம ஸம்வத்ஸரே, தக்ஷிணாயணே, வர்ஷ ரிதௌ, {{:monthname}} மாஸே, க்ருஷ்ண பக்ஷே, {{:thithiname}} புண்யதிதௌ, வாஸர: வாஸரஸ்து
  {{:dayname}} வாஸர யுக்தாயாம், {{:starname}} நக்ஷத்ர யுக்தாயாம்¬ {{:yoganame}} நாம யோக {{:karananame}} கரண ஏவங்குண விஸேஷண விசிஷ்ட்டாயாம் அஸ்யாம் வர்தமானாயாம்
  {{:thithiname}} புண்யதிதௌ
-<p/>
+</p>
 
 <quote>
 ப்ராசீன விதி - பூணூல் இடம் மாற்றிக்கொள்ளவும்
@@ -74,11 +74,11 @@ var data =
   
 <p>
 வஸுருத்ராதித்ய, ஸ்வரூபாணாம் அஸ்மத், ஸபத்னீக, மாதாமஹ, மாது: பிதாமஹ, மாது: ப்ரபிதா மஹாணாம் உபயவம்ஸபித்ரூணாம் தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு-ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவசிஷ்டானாம் ஸர்வேஷாம் காருணீக பித்ரூணாம்ஶ்ச துரிலோசன ஸம்யகாணாம் விஶ்வேஷாம் தேவாணாம் மஹாவிஷ்ணூஶ்ச அக்ஷ்ய்ய த்ருப்த்யர்த்தம் ஸிம்ஹகதே ஸவிதரி ஆஷாட்யா: பஞ்சமாபரபக்ஷ ப்ரயுக்த மஹாளய பக்ஷ புண்யகாலே அத்யதின மஹாளய ஸ்ரார்த்தம்  தில தர்பண ரூபேண அத்ய கரிஷ்யே.
-<p/>
+</p>
 
 <p>
 தர்ப்பத்தை வலது பக்கம் போட்டுவிட்டு, பூணூலை வலம் பண்ணிண்டு கையை அலம்பிக்கிறது, திருப்பியும் இடம் பண்ணிக்கிறது.												
-<p/>
+</p>
 
 <p>
  <br />
@@ -86,17 +86,17 @@ var data =
  <br />
 avahanam:
 ஸகாருணீக வர்கத்வய பித்ரூண் ஆவாஹயாமி
-<p/>
+</p>
 
 <p>
  Instead of <strike>ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி</strike>, say
 தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவஸிஷ்ட்டாணாம் ஸர்வேஶாம் ஸகாருணீக பித்ரூன் ஸ்வதா நமஸ் தர்ப்பயாமி
-<p/>
+</p>
 
 <p>
 யதாஸ்தானம் - (எள்ளை எடுத்து ஆவாஹனம் செய்த மாதிரி எடுத்துப்போடவும்):
 ஆயாத பிதர: ஸோம்யா கம்பீரை:பூர்வ்யை: ப்ரஜாமஸ்மப்யம் தததோ ரயிம் ச தீர்காயுத்வம் ச ஶதஶாரதஞ் ச அஸ்மாத் கூர்ச்சாத் (ஒரு கூர்ச்சமா இருக்கரவா) ஸகாருணீக வர்க்கத்வய பித்ரூன் யதாஸ்த்தானம் ப்ரதிஷ்டாபயாமி என்று எள்ளைப்போடவும்.
-<p/>
+</p>
 
 <script type="text/javascript">
 var template = $.templates("#theTmpl");
