--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
  <title>Mahalayam notes</title>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://www.jsviews.com/download/jsrender.min.js"></script>
-  <link href="https://www.jsviews.com/samples/samples.css" rel="stylesheet" />
+  <script src="https://www.jsviews.com/download/jsviews.min.js"></script>
+ <link href="https://www.jsviews.com/samples/samples.css" rel="stylesheet" />
 <script type="text/javascript">
 var data = 
     [
@@ -100,10 +100,7 @@ avahanam:
 
 <script type="text/javascript">
 var template = $.templates("#theTmpl");
-
-var htmlOutput = template.render(data);
-
-$("#tharppanam").html(htmlOutput);
+template.link("#tharppanam");
 </script>
 </body>
 </html>
