missed to pass the binding data variable

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ avahanam:
 
 <script type="text/javascript">
 var template = $.templates("#theTmpl");
-template.link("#tharppanam");
+template.link("#tharppanam", data);
 </script>
 </body>
 </html>
