--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
  <title>Mahalayam notes</title>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://www.jsviews.com/download/jsviews.min.js"></script>
@@ -8,8 +9,8 @@
 var data = 
     [
      {
-"day": "புதன்",
-"date":  "22-09-2021",
+"day": "வியாழன்",
+"date":  "23-09-2021",
 "userdata": {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
@@ -19,22 +20,31 @@ var data =
 },
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
-"thithiname": "த்விதீயாயாம்",
-"starname":  "ரேவதீ",
-"dayname":  "சௌம்ய",
-"yoganame":  "வ்ருத்தி",
-"karananame": "தைதுல"
+"thithiname": "த்ருதீயாயாம்",
+"starname":  "அஸ்வினி",
+"dayname":  "குரு",
+"yoganame":  "துருவ",
+"karananame": "வணிஜ"
  }
  ];
 </script>
  </head>
  <body>
 
+  <p>
+  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <i class="bi bi-people-fill"></i><i class="bi bi-person-fill"></i>
+  </a>
+</p>
 <div id="tharppanam"></div>
 
 <script id="theTmpl" type="text/x-jsrender">
-<label>தாயார் உள்ளார் <input type="checkbox" data-link="userdata.motheralive" /> </label>
 
+<div class="collapse-horizontal" id="collapseExample2">
+  <div class="card card-body" style="width: 200px;">
+<label>தாயார் உள்ளார் <input type="checkbox" data-link="userdata.motheralive" /> </label>
+ </div>
+</div>
 <h1 style="color: darkblue">{{:date}}. {{:day}}.</h1>
 
 <p>ஆசமனம் </p>
@@ -103,5 +113,6 @@ avahanam:
 var template = $.templates("#theTmpl");
 template.link("#tharppanam", data);
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
