bootstrap icon stylesheet included

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
  <title>Mahalayam notes</title>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://www.jsviews.com/download/jsviews.min.js"></script>
@@ -31,8 +32,8 @@ var data =
  </head>
  <body>
 
-  <p>
-  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+<p>
+ <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         <i class="bi bi-people-fill"></i><i class="bi bi-person-fill"></i>
   </a>
 </p>
@@ -42,7 +43,7 @@ var data =
 
 <div class="collapse-horizontal" id="collapseExample2">
   <div class="card card-body" style="width: 200px;">
-<label>தாயார் உள்ளார் <input type="checkbox" data-link="userdata.motheralive" /> </label>
+    <label>தாயார் உள்ளார் <input type="checkbox" data-link="userdata.motheralive" /> </label>
  </div>
 </div>
 <h1 style="color: darkblue">{{:date}}. {{:day}}.</h1>
