updated for 24th

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 var data = 
     [
      {
-"day": "வியாழன்",
-"date":  "23-09-2021",
+"day": "சவள்ளி. மஹாபரணி",
+"date":  "24-09-2021",
 "userdata": {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
@@ -21,11 +21,11 @@ var data =
 },
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
-"thithiname": "த்ருதீயாயாம்",
-"starname":  "அஸ்வினி",
-"dayname":  "குரு",
-"yoganame":  "துருவ",
-"karananame": "வணிஜ"
+"thithiname": "த்ருதீயாயாம் ததுபரி சதுர்த்யாம்",
+"starname":  "அஸ்வினி ததுபரி அபபரணி",
+"dayname":  "ப்ருகு",
+"yoganame":  "வ்யாகாத",
+"karananame": "பவ"
  }
  ];
 </script>
@@ -44,7 +44,7 @@ var data =
 <div id="tharppanam"></div>
 
 <script id="theTmpl" type="text/x-jsrender">
-<div class="collapse-horizontal" id="collapseMotherAlive">
+<div class="collapse" id="collapseMotherAlive">
   <div class="card card-body" style="width: 400px;">
         <label class="form-check-label">தாயார் உள்ளார் <input type="checkbox" data-link="userdata.motheralive" class="form-check-input" /> </label>
         <label class="form-label" for="appagothram">அப்பா கோத்ரம் <input type="text" id="appagothram" data-link="{:userdata.appagothram:}" class="form-control" /> </label>
