--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 var data = 
     [
      {
-"day": "சவள்ளி. மஹாபரணி",
-"date":  "24-09-2021",
+"day": "சனி",
+"date":  "25-09-2021",
 "userdata": {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
@@ -21,11 +21,11 @@ var data =
 },
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
-"thithiname": "த்ருதீயாயாம் ததுபரி சதுர்த்யாம்",
-"starname":  "அஸ்வினி ததுபரி அபபரணி",
-"dayname":  "ப்ருகு",
-"yoganame":  "வ்யாகாத",
-"karananame": "பவ"
+"thithiname": " சதுர்த்யாம் ததுபரி பஞ்சம்யாம்",
+"starname":  "அபபரணி ததுபரி க்ருத்திகா ",
+"dayname":  "ஸ்திர",
+"yoganame":  "ஹர்ஷனம்"
+"karananame": "கௌலவ"
  }
  ];
 </script>
