fixed comma typo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var data =
 "thithiname": " சதுர்த்யாம் ததுபரி பஞ்சம்யாம்",
 "starname":  "அபபரணி ததுபரி க்ருத்திகா ",
 "dayname":  "ஸ்திர",
-"yoganame":  "ஹர்ஷனம்"
+"yoganame":  "ஹர்ஷனம்",
 "karananame": "கௌலவ"
  }
  ];
