updated for 4th october

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 var data = 
     [
      {
-"day": "சனி",
-"date":  "25-09-2021",
+"day": "திங்கள்",
+"date":  "04-10-2021",
 "userdata": {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
@@ -21,11 +21,11 @@ var data =
 },
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
-"thithiname": " சதுர்த்யாம் ததுபரி பஞ்சம்யாம்",
-"starname":  "அபபரணி ததுபரி க்ருத்திகா ",
-"dayname":  "ஸ்திர",
-"yoganame":  "ஹர்ஷனம்",
-"karananame": "கௌலவ"
+"thithiname": " த்ரயோதஷ்யாம்",
+"starname":  "பூர்வ பல்குனி",
+"dayname":  "இந்து",
+"yoganame":  "சுப",
+"karananame": "வனிஜ"
  }
  ];
 </script>
