updated for 5th oct

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 var data = 
     [
      {
-"day": "திங்கள்",
-"date":  "04-10-2021",
+"day": "செவ்வாய்",
+"date":  "05-10-2021",
 "userdata": {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
@@ -21,11 +21,11 @@ var data =
 },
 "yearname":  "ப்லவ",
 "monthname":  "கன்யா",
-"thithiname": " த்ரயோதஷ்யாம்",
-"starname":  "பூர்வ பல்குனி",
-"dayname":  "இந்து",
-"yoganame":  "சுப",
-"karananame": "வனிஜ"
+"thithiname": "சதுர்தஷ்யாம்",
+"starname":  "உத்ர பல்குனி",
+"dayname":  "பௌம",
+"yoganame":  "சுப்ர",
+"karananame": "பத்ர"
  }
  ];
 </script>
