testing with two array entries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@ var data =
 "dayname":  "பௌம",
 "yoganame":  "சுப்ர",
 "karananame": "பத்ர"
+ },
+        {
+"day": "செவ்வாய்",
+"date":  "05-10-2021",
+"userdata": {
+"motheralive":  true,
+"appagothram":  "பாரத்வாஜ",
+"pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
+"maamagothram":  "கௌண்டின்ய",
+"maamasharmas":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"]
+},
+"yearname":  "ப்லவ",
+"monthname":  "கன்யா",
+"thithiname": "சதுர்தஷ்யாம்",
+"starname":  "உத்ர பல்குனி",
+"dayname":  "பௌம",
+"yoganame":  "சுப்ர",
+"karananame": "பத்ர"
  }
  ];
 </script>
