updated the data with userdata property

--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@ var dataAll =
  var strCurrentDate = dtCurrent.getDate() + '-' + dtCurrent.getMonth() + '-' + dtCurrent.getFullYear();
  var data = new Array();
  data.push(dataAll.filter(thedata => thedata.date === strCurrentDate));
- data.push(
-  { "userdata": {
+ data.userdata: {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
 "pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
 "maamagothram":  "கௌண்டின்ய",
 "maamasharmas":  ["பஞ்சவதீஸ்வர", "கைலாசநாத", "பஞ்சவதீஸ்வர"]
-}}
- )
+}
 </script>
  </head>
  <body>
