--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var dataAll =
  var strCurrentDate = dtCurrent.getDate() + '-' + dtCurrent.getMonth() + '-' + dtCurrent.getFullYear();
  var data = new Array();
  data.push(dataAll.filter(thedata => thedata.date === strCurrentDate));
- data.userdata: {
+ data.userdata = {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
 "pithrusharmas":  ["நாராயண", "ஶ்ரீ க்ருஷ்ண","நாராயண"],
