--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@ var dataAll =
  //filter for the current date sankalpam
  var dtCurrent = new Date();
  var strCurrentDate = dtCurrent.getDate() + '-' + dtCurrent.getMonth() + '-' + dtCurrent.getFullYear();
+ var filteredForCurrentDate = dataAll.filter(thedata => thedata.date === strCurrentDate);
+ 
  var data = new Array();
- data.push(dataAll.filter(thedata => thedata.date === strCurrentDate));
+ if(filteredForCurrentDate == undefined)
+ {
+  filteredForCurrentDate = dataAll[0];
+ }
+ data.push(filteredForCurrentDate);
  data.userdata = {
 "motheralive":  true,
 "appagothram":  "பாரத்வாஜ",
