--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@ var dataAll =
 "karananame": "UNKNOWN"
  },
         {
-"day": "செவ்வாய்",
-"date":  "2022-09-14",
-"yearname":  "subakruthu",
-"monthname":  "கன்யா",
-"thithiname": "சதுர்தஷ்யாம்",
-"starname":  "உத்ர பல்குனி",
-"dayname":  "பௌம",
-"yoganame":  "சுப்ர",
-"karananame": "பத்ர"
+"day": "வியாழன்",
+"date":  "2022-09-15",
+"yearname":  "சுபக்ருது",
+"monthname":  "ஸிம்ஹ",
+"thithiname": "பஞ்சம்யாம்",
+"starname":  "க்ருத்திகா",
+"dayname":  "குரு",
+"yoganame":  "ஹர்ஷண",
+"karananame": "தைத்துல"
  }
  ];
  
