more meaningful config error message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 var dataAll = 
     [
      {
-"day": "INCORRECT",
+"day": "Sankalpa mantras not ready for this day",
 "date":  "1900-01-01",
 "yearname":  "UNKNOWN",
 "monthname":  "UNKNOWN",
