--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@ var dataAll =
 "dayname":  "குரு",
 "yoganame":  "ஹர்ஷண",
 "karananame": "தைத்துல"
+ },
+        {
+"day": "வெள்ளி",
+"date":  "2022-09-16",
+"yearname":  "சுபக்ருது",
+"monthname":  "ஸிம்ஹ",
+"thithiname": "ஷஷ்ட்யாம்",
+"starname":  "க்ருத்திகா",
+"dayname":  "",
+"yoganame":  "வஜ்ர",
+"karananame": "வணிஜ"
  }
+
  ];
  
  //filter for the current date sankalpam
