--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@ var dataAll =
 "monthname":  "ஸிம்ஹ",
 "thithiname": "ஷஷ்ட்யாம்",
 "starname":  "க்ருத்திகா",
-"dayname":  "",
+"dayname":  "ப்ருகு",
 "yoganame":  "வஜ்ர",
 "karananame": "வணிஜ"
+ },
+	           {
+"day": "சனி",
+"date":  "2022-09-17",
+"yearname":  "சுபக்ருது",
+"monthname":  "ஸிம்ஹ",
+"thithiname": "ஸப்தமியாம்",
+"starname":  "ரோஹினீ",
+"dayname":  "ஸ்திர",
+"yoganame":  "ஸித்தி",
+"karananame": "ப3வ"
  }
 
  ];
