--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@ var dataAll =
 "dayname":  "ஸ்திர",
 "yoganame":  "ஸித்தி",
 "karananame": "ப3வ"
+ },
+	           {
+"day": "ஞாயிறு",
+"date":  "2022-09-18",
+"yearname":  "சுபக்ருது",
+"monthname":  "ஸிம்ஹ",
+"thithiname": "அஷ்டம்யாம்",
+"starname":  "ம்ருகஷீரஷ்",
+"dayname":  "பானு",
+"yoganame":  "வ்யதீபாத",
+"karananame": "கௌலவ"
  }
 
  ];
