--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@ var dataAll =
 "dayname":  "பானு",
 "yoganame":  "வ்யதீபாத",
 "karananame": "கௌலவ"
+ },
+	    {
+"day": "திங்கள்",
+"date":  "2022-09-19",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "நவம்யாம் ",
+"starname":  "ஆர்தரா",
+"dayname":  "இந்து",
+"yoganame":  "வரீயாந்",
+"karananame": "க3ரஜ"
+ },
+	    {
+"day": "செவ்வாய்",
+"date":  "2022-09-20",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "தசம்யாம் ",
+"starname":  "புநர்வசு",
+"dayname":  "பௌம",
+"yoganame":  "பரிக4",
+"karananame": "ப4த்3ர"
  }
 
  ];
