--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ var dataAll =
 "yoganame":  "வரீயாந்",
 "karananame": "க3ரஜ"
  },
-	    {
+	{
 "day": "செவ்வாய்",
 "date":  "2022-09-20",
 "yearname":  "சுபக்ருது",
@@ -85,7 +85,30 @@ var dataAll =
 "dayname":  "பௌம",
 "yoganame":  "பரிக4",
 "karananame": "ப4த்3ர"
+ },
+	{
+"day": "புதன்",
+"date":  "2022-09-21",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "ஏகாத3ஸ்யாம்",
+"starname":  "புஷ்ய",
+"dayname":  "சௌம்ய",
+"yoganame":  "ஷிவ",
+"karananame": "பா3லவ"
+ },
+	{
+"day": "வியாழன்",
+"date":  "2022-09-22",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "த்வாத3ஸ்யாம்",
+"starname":  "ஆஷ்ரேஷா",
+"dayname":  "குரு",
+"yoganame":  "ஸித்த",
+"karananame": "தைதில"
  }
+
 
  ];
  
@@ -207,6 +230,13 @@ avahanam:
 ஸகாருணீக வர்கத்வய பித்ரூண் ஆவாஹயாமி
 </p>
 
+<p>
+	<br />
+	<br />
+	<br />
+
+</p>
+	 
 <p>
  Instead of <strike>ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி</strike>, say
 தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவஸிஷ்ட்டாணாம் ஸர்வேஶாம் ஸகாருணீக பித்ரூன் ஸ்வதா நமஸ் தர்ப்பயாமி
