--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@ var dataAll =
 "dayname":  "குரு",
 "yoganame":  "ஸித்த",
 "karananame": "தைதில"
+ },
+	    	{
+"day": "வெள்ளி",
+"date":  "2022-09-23",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "த்ரயோத3ஸ்யாம்",
+"starname":  "மகா",
+"dayname":  "ப்ருகு",
+"yoganame":  "ஸாத்ய",
+"karananame": "க3ரஜ"
+ },
+{
+"day": "சனி",
+"date":  "2022-09-24",
+"yearname":  "சுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "சதுர்த3ஸ்யாம்",
+"dayname":  "ஸ்திர",
+"starname":  "பூர்வபல்குனி",
+"yoganame":  "ஷூப",
+"karananame": "ப4த்3ர"
  }
 
 
