--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@ var dataAll =
 "starname":  "பூர்வபல்குனி",
 "yoganame":  "ஷூப",
 "karananame": "ப4த்3ர"
+ },
+{
+"day": "செவ்",
+"date":  "2023-10-03",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "சதுர்த்யாம்",
+"dayname":  "பௌம",
+"starname":  "க்ருத்திகா",
+"yoganame":  "விஷ்ணு",
+"karananame": "விஷ்ணு"
  }
 
 
@@ -257,6 +268,12 @@ avahanam:
 	<br />
 	<br />
 
+</p>
+
+<p>
+	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3)
+	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3)
+	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி
 </p>
 	 
 <p>
