formatting for additional vargam

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ avahanam:
 </p>
 
 <p>
+	....tharppanam...
 	<br />
 	<br />
 	<br />
@@ -271,9 +272,9 @@ avahanam:
 </p>
 
 <p>
-	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3)
-	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3)
-	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி
+	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br />
+	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br />
+	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி (3)
 </p>
 	 
 <p>
